@@ -39,6 +39,7 @@
   *  - Fixed incorrect definition of HID_ALIGN_DATA() causing incorrect HID report item data alignment
   *  - Fixed Still Image Host class driver not resetting the transaction ID when a new session is opened, fixed driver not sending
   *    a valid session ID to the device
+  *  - Removed invalid dfu and flip related targets from the bootloaders - bootloaders can only be replaced with an external programmer
   *
   *  \section Sec_ChangeLog100219 Version 100219
   *
